--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/assets/tailwind.css --minify",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.13.0",
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.45.0",
     "react": "^19.1.1",
@@ -17,7 +17,10 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
     "supabase": "^2.33.9",
+    "tailwindcss": "^3.4.10",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
