--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,8 @@
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "exclude": [
+    "audit-review" // Exclude audit artifacts (not part of runtime code)
+  ]
 }
