--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/assets/tailwind.css --minify",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npm run build:css && vite build",
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint . --ext .ts,.tsx --max-warnings=0"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -17,7 +19,13 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.4.41",
     "supabase": "^2.33.9",
     "tailwindcss": "^3.4.10",
