--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "build": "npm run build:css && vite build",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
-  "lint": "eslint . --ext .ts,.tsx --max-warnings=50",
-  "test": "vitest run"
+  "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
+  "test": "vitest run",
+  "test:cov": "vitest run --coverage",
+  "coverage": "vitest run --coverage",
+  "prepare": "husky"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -26,12 +29,23 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
   "vitest": "^2.0.5",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.4.41",
     "supabase": "^2.33.9",
     "tailwindcss": "^3.4.10",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+  "vite": "^6.2.0",
+  "@vitest/coverage-v8": "^2.1.0",
+  "zod": "^3.23.8"
+  }
+  ,
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "vitest related --run"
+    ]
   }
 }
