--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
   "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
-  "test": "vitest run",
-  "test:cov": "vitest run --coverage",
-  "coverage": "vitest run --coverage",
-  "prepare": "husky"
+  "lint:css": "stylelint \"**/*.{css,scss}\"",
+  "diagnose": "node scripts/diagnose_env.mjs --no-post",
+    "test": "vitest run",
+    "test:cov": "vitest run --coverage",
+    "coverage": "vitest run --coverage",
+    "prepare": "husky"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -22,30 +24,40 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.14.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "@vitest/coverage-v8": "^2.1.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-  "vitest": "^2.0.5",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "postcss": "^8.4.41",
+    "husky": "^9.1.6",
+    "jsdom": "^26.1.0",
+    "lint-staged": "^15.2.10",
+  "postcss": "^8.4.41",
+  "stylelint": "^16.9.0",
+  "stylelint-config-standard": "^36.0.0",
+  "stylelint-config-tailwindcss": "^0.0.7",
+  "stylelint-order": "^6.0.4",
     "supabase": "^2.33.9",
     "tailwindcss": "^3.4.10",
     "typescript": "~5.8.2",
-  "vite": "^6.2.0",
-  "@vitest/coverage-v8": "^2.1.0",
-  "zod": "^3.23.8"
-  }
-  ,
+    "vite": "^6.2.0",
+    "vitest": "^2.0.5",
+    "zod": "^3.23.8"
+  },
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint --fix",
       "vitest related --run"
+    ],
+    "*.{css,scss}": [
+      "stylelint --fix"
     ]
   }
 }
