--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "@supabase/supabase-js": "^2.45.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
+  ,"react-markdown": "^8.0.7",
+  "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.14.0",
+  "@types/react": "^18.2.21",
+  "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitest/coverage-v8": "^2.1.0",
